adding vuejs to handle the view layer of the website

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,36 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Row to JSON - An easier way to get your stats from your csv files</title>
+  <title>Row to JSON - An easier way to get your stats from your CSV files</title>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/jgthms/minireset.css/master/minireset.css">  <!--CSS Reset-->
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>  <!--Import Vue -->
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <!-- Start header -->
-<header>
-    <nav>
-        <ul>
-          <li>RowToJSON</li>
-          <li>About</li>
-          <li>Github</li>
-        </ul>
-    </nav>
+<!--Header Section-->
+<header id="header">
+
 </header>
-<!-- END header -->
-
-<!--Start Main  -->
-<main>
-  <section>
-    
-  </section>
-  <section>
-
-  </section>
+<!-- End Header Section-->
+<!--Main section-->
+<main id="app">
+  {{message}}
 </main>
-<!--End Main  -->
-
-<!--Start Footer  -->
-<footer>
+<!--End Main Section-->
+<footer id=""footer>
 
 </footer>
-<!--End Footer  -->
+<script src="header.js"></script>
 </body>
 </html>
